# robust-ai-document-extractor

./: .gitignore  DOCKERFILE  DOMAIN_NOTES.md  README.md  main.py  pyproject.toml  requirements.txt  sync_db.py
.refinery/: fact_table.db  fact_table.db-journal  fact_table.jsonl  vector_store.faiss  vector_store_metadata.jsonl
.refinery/pageindex/: Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
rubric/: extraction_rules.yaml
src/agents/: audit_agent.py  chunker.py  classifiers.py  extraction_router.py  indexer.py  query_agent.py  structured_query.py  triage.py
src/data/: fact_table.py  vector_store.py
src/models/: common.py  document_profile.py  extracted_document.py  ldu.py  page_index.py  provenance.py
src/strategies/: base.py  fast_text.py  layout.py  vision.py
src/utils/: llm_utils.py
tests/: test_confidence.py  test_triage.py  test_vlm_mock.py
