[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robust-ai-document-extractor"
version = "1.3.0"
authors = [
  { name="Deepmind Antigravity", email="support@antigravity.google" },
]
description = "Enterprise-grade document extraction pipeline with confidence-gated routing and RAG."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "pdfplumber",
    "docling",
    "faiss-cpu",
    "numpy",
    "pyyaml",
    "openai",
    "python-dotenv",
    "pillow",
]

[project.urls]
"Homepage" = "https://github.com/Deregit2025/robust-ai-document-extractor"
"Bug Tracker" = "https://github.com/Deregit2025/robust-ai-document-extractor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
